fix(yalb-980): remove width on img, update footer logo link to a wrapped unicode

--- a/components/02-molecules/image/_yds-content-image.scss
+++ b/components/02-molecules/image/_yds-content-image.scss
@@ -2,8 +2,4 @@
 
 .content-image {
   @include tokens.spacing-page-inner;
-
-  img {
-    width: 100%;
-  }
 }
